@@ -1,5 +1,7 @@
 ARCHES = alpha amd64 arm hppa i386 ia64 m68k mips mipsel powerpc s390 sparc
 
 test:
-	@cd tests && \
-	for x in $(ARCHES); do ./runtests "$$x"; done
+	@STATUS=0; \
+	cd tests && \
+	for x in $(ARCHES); do ./runtests "$$x" || STATUS=1; done; \
+	exit "$$STATUS"
